--- a/src/components/ui/forms/Input.astro
+++ b/src/components/ui/forms/Input.astro
@@ -1,5 +1,6 @@
 ---
-const { type, name, id, placeholder, value, required = false } = Astro.props;
+const { type, name, id, placeholder, value, required } = Astro.props;
+console.log(required)
 ---
 
 <input 
