--- a/src/components/ui/forms/PhoneInput.astro
+++ b/src/components/ui/forms/PhoneInput.astro
@@ -2,7 +2,7 @@
 import Label from '~/components/ui/forms/Label.astro'
 ---
 <div class="mb-3 relative rounded-md shadow-sm">
-  <Label htmlFor="phone" required>Phone Number </Label>
+  <Label htmlFor="phone">Phone Number</Label>
   <div class="absolute inset-y-0 left-0 flex items-center">
     <label for="country" class="sr-only">Country</label>
     <select id="country" name="country" autocomplete="country" class="h-full rounded-sm border-0 bg-transparent py-0 pl-3 pr-2 text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm">
