--- a/src/pages/tier2.astro
+++ b/src/pages/tier2.astro
@@ -22,8 +22,8 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'What is Tier 1?',
-        href: '#tier1',
+        text: 'What is Tier 2?',
+        href: '#tier2',
         target: '',
         icon: 'line-md:chevron-double-down',
       },
@@ -37,18 +37,18 @@ const metadata = {
     }}
   >
     <Fragment slot="title">
-      <span class="text-accent dark:text-white highlight">Tier 1:</span> From Printeres to Passwords
+      <span class="text-accent dark:text-white highlight">Tier 2:</span> Specialist IT Support.
     </Fragment>
 
     <Fragment slot="subtitle">
-      <span class="font-semibold">Front Line Support</span> to handle fundamental IT issues such as password resets, hardware
-      and software troubleshooting, ticket triaging, and more.
+      <span class="font-semibold">Dedicated experts</span> to handle complex, high-priority, or specialized IT issues that
+      are critical to the function of your business.
     </Fragment>
   </Hero>
   <Features
-    id="tier1"
-    tagline="Your Front Lines"
-    title="What is Tier 1 Support?"
+    id="tier2"
+    tagline="Expert IT Resources"
+    title="What is Tier 2 Support?"
     items={[
       {
         title: 'Basic Troubleshooting',
@@ -59,7 +59,7 @@ const metadata = {
       {
         title: 'Password Resets',
         description:
-          "Everyone'   ``56rtttttttttttttttttttts locked themselves out (us included), don't become a headline. We'll help keep your data safe, giving you peace of mind and ensuring your business's data is safe.",
+          "Everyon'es locked themselves out (us included), don't become a headline. We'll help keep your data safe, giving you peace of mind and ensuring your business's data is safe.",
         icon: 'clarity:lock-solid',
       },
       {
