updated worker, copy, navigation

--- a/src/pages/tier1.astro
+++ b/src/pages/tier1.astro
@@ -59,13 +59,13 @@ const metadata = {
       {
         title: 'Password Resets',
         description:
-          "Everyone'   ``56rtttttttttttttttttttts locked themselves out (us included), don't become a headline. We'll help keep your data safe, giving you peace of mind and ensuring your business's data is safe.",
+          "Everyone's locked themselves out (us included), don't become a headline. We'll help keep your data safe, giving you peace of mind and ensuring your business's data is safe.",
         icon: 'clarity:lock-solid',
       },
       {
         title: 'Software Support',
         description:
-          'From installation to troubleshooting, our team is here to support all your software needs. We provide guidance through the complexities of software setup, usage, and optimization.',
+          'From installation to troubleshooting, our team supports all your software needs. We provide guidance through the complexities of software setup, usage, and optimization.',
         icon: 'clarity:cog-solid',
       },
       {
@@ -77,7 +77,7 @@ const metadata = {
       {
         title: 'Triage and Esclation',
         description:
-          'Complex issues can critically impact your business. Our tier 1 team will help identify workarounds, get your ticket infront of the right tier 2 expert, and ensure that your issues are fully resolved quickly.',
+          'Complex issues can critically impact your business. Our tier 1 team will help identify workarounds, get your ticket in front of the right tier 2 expert, and ensure that your issues are fully resolved quickly.',
         icon: 'clarity:flow-chart-solid',
       },
       {
