--- a/src/pages/tier2.astro
+++ b/src/pages/tier2.astro
@@ -51,39 +51,34 @@ const metadata = {
     title="What is Tier 2 Support?"
     items={[
       {
-        title: 'Basic Troubleshooting',
-        description:
-          'Encounter a glitch? Reach out to us via email, chat, or phone, and our local technical experts will swiftly resolve your basic IT issues, ensuring minimal downtime.',
-        icon: 'clarity:application-solid',
-      },
-      {
-        title: 'Password Resets',
-        description:
-          "Everyon'es locked themselves out (us included), don't become a headline. We'll help keep your data safe, giving you peace of mind and ensuring your business's data is safe.",
-        icon: 'clarity:lock-solid',
-      },
-      {
-        title: 'Software Support',
-        description:
-          'From installation to troubleshooting, our team is here to support all your software needs. We provide guidance through the complexities of software setup, usage, and optimization.',
+        title: 'Advanced Troubleshooting',
+        description: 'Our seasoned experts provide a shortcut to solutions for hard problems, minimizign downtime',
         icon: 'clarity:cog-solid',
       },
       {
-        title: 'Documentation',
-        description:
-          'Access comprehensive support for all your hardware, from printers to servers. We provide fast, reliable solutions to keep your operations smooth and efficient.',
-        icon: 'clarity:file-solid',
+        title: 'Infrastructure Management',
+        description: 'We help keep your network secure, managing everything from servers to network devices.',
+        icon: 'clarity:flow-chart-line',
       },
       {
-        title: 'Triage and Esclation',
+        title: 'Complex Software Configuration',
+        description: 'Enterprise software support that ranges from deployments to troubleshooting.',
+        icon: 'clarity:application-solid',
+      },
+      {
+        title: 'In-Depth Security Management',
         description:
-          'Complex issues can critically impact your business. Our tier 1 team will help identify workarounds, get your ticket infront of the right tier 2 expert, and ensure that your issues are fully resolved quickly.',
+          'From threat detection to prevention, we ensure your business is protected from various security risks.',
+        icon: 'clarity:lock-solid',
+      },
+      {
+        title: 'Critical Incident Response',
+        description: 'Our team is ready to respond swiftly to minimize downtime and ensure business continuity.',
         icon: 'clarity:flow-chart-solid',
       },
       {
-        title: 'Account Management',
-        description:
-          'Navigate the complexities of your IT infrastructure with our expert account management services. We partner with you to maximize your technology investments and enhance operational efficiency.',
+        title: 'Enhanced Account Management',
+        description: 'Let us manage your enterprise accounts and keep everything from Azure to AWS in sync and secure.',
         icon: 'clarity:cloud-network-line',
       },
     ]}
@@ -154,7 +149,7 @@ const metadata = {
     </Fragment>
   </Features2>
 
-  <BlogLatestPosts title="Learn More" } />
+  <BlogLatestPosts title="Learn More" />
 
   <!-- <FAQs
     title="Frequently Asked Questions"
