--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -76,8 +76,12 @@ const { Content } = post;
       {Content ? <Content /> : <Fragment set:html={post.content || ''} />}
     </div>
     <div class="mx-auto px-6 sm:px-6 max-w-3xl mt-8 flex justify-between flex-col sm:flex-row">
-      <PostTags tags={post.tags} class="mr-5 rtl:mr-0 rtl:ml-5" />
-      <SocialShare url={url} text={post.title} class="mt-5 sm:mt-1 align-middle text-gray-500 dark:text-slate-600" />
+      <SocialShare
+        url={url}
+        text={post.title}
+        class="w-1/3 mt-5 sm:mt-1 align-middle text-gray-500 dark:text-slate-600"
+      />
+      <PostTags tags={post.tags} class="w-2/3 ml-5 mr-5 rtl:mr-0 rtl:ml-5" />
     </div>
   </article>
 </section>
